Add monthly and yearly profit functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- SEO Meta Tags -->
     <title>
-      TechAcademy - Best IT Training Institute | Full Stack Developer Courses
+      Neuro Edge Technologies - Best IT Training Institute | Full Stack
+      Developer Courses
     </title>
     <meta
       name="description"
@@ -17,26 +18,26 @@
       name="keywords"
       content="Full Stack Developer Course India, Java Full Stack Bootcamp, React Node.js Training, Python Full Stack Course, IT Training Institute, Programming Courses, Web Development Training"
     />
-    <meta name="author" content="TechAcademy Training Institute" />
+    <meta name="author" content="Neuro Edge Technologies Training Institute" />
 
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="TechAcademy - Best IT Training Institute | Full Stack Developer Courses"
+      content="Neuro Edge Technologies - Best IT Training Institute | Full Stack Developer Courses"
     />
     <meta
       property="og:description"
       content="Learn Full Stack Development with Java, React, Node.js, Python. 95% placement rate, expert trainers, hands-on projects."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techacademy.com" />
+    <meta property="og:url" content="https://Neuro Edge Technologies.com" />
     <meta property="og:image" content="/og-image.jpg" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="TechAcademy - Best IT Training Institute"
+      content="Neuro Edge Technologies - Best IT Training Institute"
     />
     <meta
       name="twitter:description"
