Add monthly and yearly profit functionality

--- a/index.html
+++ b/index.html
@@ -50,10 +50,53 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
     <meta name="theme-color" content="#2563eb" />
+    <meta name="msapplication-TileColor" content="#2563eb" />
+    <meta name="application-name" content="Neuro Edge Technologies" />
+
+    <!-- Geo Location -->
+    <meta name="geo.region" content="IN-MH" />
+    <meta name="geo.placename" content="Pune, Maharashtra" />
+    <meta name="geo.position" content="18.5204;73.8567" />
+    <meta name="ICBM" content="18.5204, 73.8567" />
+
+    <!-- Business Information -->
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+    <meta
+      name="classification"
+      content="Education, IT Training, Software Development"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://neuroedgetechnologies.com/" />
+
+    <!-- Alternate Languages (if applicable) -->
+    <link
+      rel="alternate"
+      hreflang="en-in"
+      href="https://neuroedgetechnologies.com/"
+    />
+    <link
+      rel="alternate"
+      hreflang="hi-in"
+      href="https://neuroedgetechnologies.com/hi/"
+    />
 
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
+    <link rel="preconnect" href="https://www.googletagmanager.com" />
+
+    <!-- DNS Prefetch for external resources -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
+
+    <!-- Favicon and App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="app"></div>
