--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="shortcut icon" href="/logo.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
@@ -31,7 +33,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://Neuro Edge Technologies.com" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -43,7 +45,7 @@
       name="twitter:description"
       content="Learn Full Stack Development with 95% placement rate"
     />
-    <meta name="twitter:image" content="/twitter-image.jpg" />
+    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Additional Meta Tags -->
     <meta name="robots" content="index, follow" />
@@ -93,9 +95,9 @@
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
 
     <!-- Favicon and App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
     <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
