--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
 
     <!-- SEO Meta Tags -->
     <title>
-      Neuro Edge Technologies - Best IT Training Institute | Full Stack
-      Developer Courses
+      Neuro Edge Technologies - Best IT Training and Devlopment center | Full
+      Stack Developer Courses
     </title>
     <meta
       name="description"
-      content="Learn Full Stack Development with Java, React, Node.js, Python. 95% placement rate, expert trainers, hands-on projects. Join 500+ successful graduates at top companies."
+      content="Learn Full Stack Development with Java, React, Node.js, Python. 100% Placement assistance, expert trainers, hands-on projects. Join 500+ successful graduates at top companies."
     />
     <meta
       name="keywords"
       content="Full Stack Developer Course India, Java Full Stack Bootcamp, React Node.js Training, Python Full Stack Course, IT Training Institute, Programming Courses, Web Development Training"
     />
-    <meta name="author" content="Neuro Edge Technologies Training Institute" />
+    <meta
+      name="author"
+      content="Neuro Edge Technologies Training and Devlopment center"
+    />
 
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="Neuro Edge Technologies - Best IT Training Institute | Full Stack Developer Courses"
+      content="Neuro Edge Technologies - Best IT Training and Devlopment center | Full Stack Developer Courses"
     />
     <meta
       property="og:description"
-      content="Learn Full Stack Development with Java, React, Node.js, Python. 95% placement rate, expert trainers, hands-on projects."
+      content="Learn Full Stack Development with Java, React, Node.js, Python. 100% Placement assistance, expert trainers, hands-on projects."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://Neuro Edge Technologies.com" />
@@ -39,11 +42,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Neuro Edge Technologies - Best IT Training Institute"
+      content="Neuro Edge Technologies - Best IT Training and Devlopment center"
     />
     <meta
       name="twitter:description"
-      content="Learn Full Stack Development with 95% placement rate"
+      content="Learn Full Stack Development with 100% Placement assistance"
     />
     <meta name="twitter:image" content="/logo.png" />
 
