Add linked icon

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </title>
     <meta
       name="description"
-      content="Learn Full Stack Development with Java, React, Node.js, Python. 100% Placement assistance, expert trainers, hands-on projects. Join 500+ successful graduates at top companies."
+      content="Professional software development company specializing in custom web applications, mobile apps, enterprise solutions. Expert developers delivering scalable, innovative digital solutions for businesses worldwide."
     />
     <meta
       name="keywords"
-      content="Full Stack Developer Course India, Java Full Stack Bootcamp, React Node.js Training, Python Full Stack Course, IT Training Institute, Programming Courses, Web Development Training"
+      content="Software Development Company India, Custom Web Development, Mobile App Development, Enterprise Software Solutions, React Development Services, Java Development Company, Software Consulting, Web Application Development, Digital Solutions Provider"
     />
     <meta
       name="author"
-      content="Neuro Edge Technologies Training and Devlopment center"
+      content="Neuro Edge Technologies Software Devlopment center"
     />
 
     <!-- Open Graph Meta Tags -->
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:description"
-      content="Learn Full Stack Development with Java, React, Node.js, Python. 100% Placement assistance, expert trainers, hands-on projects."
+      content="Professional software development company specializing in custom web applications, mobile apps, enterprise solutions. Expert developers delivering scalable digital solutions."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://Neuro Edge Technologies.com" />
@@ -46,7 +46,7 @@
     />
     <meta
       name="twitter:description"
-      content="Learn Full Stack Development with 100% Placement assistance"
+      content="Professional software development company delivering custom web applications, mobile apps, and enterprise solutions"
     />
     <meta name="twitter:image" content="/logo.png" />
 
