--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- SEO Meta Tags -->
     <title>
-      Neuro Edge Technologies - Best IT Training and Devlopment center | Full
-      Stack Developer Courses
+      Neuro Edge Technologies - Software Devlopment center | Custom Web & Mobile
+      Solutions
     </title>
     <meta
       name="description"
@@ -28,7 +28,7 @@
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="Neuro Edge Technologies - Best IT Training and Devlopment center | Full Stack Developer Courses"
+      content="Neuro Edge Technologies - Software Devlopment center | Custom Web & Mobile Solutions"
     />
     <meta
       property="og:description"
@@ -42,7 +42,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Neuro Edge Technologies - Best IT Training and Devlopment center"
+      content="Neuro Edge Technologies - Software Devlopment center"
     />
     <meta
       name="twitter:description"
@@ -67,10 +67,7 @@
     <!-- Business Information -->
     <meta name="rating" content="general" />
     <meta name="distribution" content="global" />
-    <meta
-      name="classification"
-      content="Education, IT Training, Software Development"
-    />
+    <meta name="classification" content="IT Software Development" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://neuroedgetechnologies.com/" />
