--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,8 +9,8 @@
 
     <!-- SEO Meta Tags -->
     <title>
-      Neuro Edge Technologies - Software Devlopment center | Custom Web & Mobile
-      Solutions
+      Neuro Edge Technologies - Software Development center | Custom Web &
+      Mobile Solutions
     </title>
     <meta
       name="description"
@@ -22,13 +22,13 @@
     />
     <meta
       name="author"
-      content="Neuro Edge Technologies Software Devlopment center"
+      content="Neuro Edge Technologies Software Development center"
     />
 
     <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="Neuro Edge Technologies - Software Devlopment center | Custom Web & Mobile Solutions"
+      content="Neuro Edge Technologies - Software Development center | Custom Web & Mobile Solutions"
     />
     <meta
       property="og:description"
@@ -42,7 +42,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Neuro Edge Technologies - Software Devlopment center"
+      content="Neuro Edge Technologies - Software Development center"
     />
     <meta
       name="twitter:description"
